# kalman

./: LICENSE  kalman.cabal
src/: Matrix.hs  MatrixOld.hs
