name:                kalman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/banditpig/kalman#readme
license:             BSD3
license-file:        LICENSE
author:              banditpig
maintainer:          banditpig@gitcommit.co.uk
copyright:           2019 banditpig
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kalman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
